@@ -1,3 +1,9 @@
+2008-07-04  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* ventas.c (on_sell_button_clicked): Added 'CHASH' to sell type
+	when sell directly.
+	Indented some lines, deleted tabs.
+
 2008-07-02  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* ventas.c: Replaced informacion_producto() for
